--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </header>
 
   <div class="alert container position-sticky top-0 alert-primary hide" role="alert">
-    Producto Añadido al carrito!<a href="carrito" class="alert-link">ver Carrito</a>
+    Producto Añadido al carrito!<a href="carrito" class="alert-link">  ver Carrito</a>
   </div>
   <div class="alert container position-sticky top-0 alert-danger remove" role="alert">
     Producto removido!
@@ -58,17 +58,17 @@
     <div class="tab-pane fade show active container" id="pills-profile" role="tabpanel"
       aria-labelledby="pills-profile-tab">
       <h2 class="h4 m-4 text-primary">Productos</h2>
-
+<main>
       <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4">
 
         <div class="col d-flex justify-content-center mb-4">
           <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-            <h5 class="card-title pt-2 text-center text-primary">Card title 1</h5>
+            <h5 class="card-title pt-2 text-center text-primary">cuadros tripticos cuerina 1</h5>
             <img src="./img/j-.51.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text text-white-50 description">Some quick example text to build on the card title and make
                 up the bulk of the card's content.</p>
-              <h5 class="text-primary">Precio: <span class="precio">$ 5</span></h5>
+              <h5 class="text-primary">Precio: <span class="precio">$ 2500</span></h5>
               <div class="d-grid gap-2">
                 <button class="btn btn-primary button">Añadir a Carrito</button>
               </div>
@@ -77,12 +77,12 @@
         </div>
         <div class="col d-flex justify-content-center mb-4">
           <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-            <h5 class="card-title pt-2 text-center text-primary">Card title 2</h5>
+            <h5 class="card-title pt-2 text-center text-primary">Cuadros tripticos montados en vinilo 2</h5>
             <img src="./img/j-52.png" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text text-white-50 description">Some quick example text to build on the card title and make
                 up the bulk of the card's content.</p>
-              <h5 class="text-primary">Precio: <span class="precio">$ 5</span></h5>
+              <h5 class="text-primary">Precio: <span class="precio">$ 2500</span></h5>
               <div class="d-grid gap-2">
                 <button class="btn btn-primary button">Añadir a Carrito</button>
               </div>
@@ -91,12 +91,12 @@
         </div>
         <div class="col d-flex justify-content-center mb-4">
           <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-            <h5 class="card-title pt-2 text-center text-primary">Card title 3</h5>
+            <h5 class="card-title pt-2 text-center text-primary">Cuadro Tripticos de lona front 3</h5>
             <img src="./img/j-53.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text text-white-50 description">Some quick example text to build on the card title and make
                 up the bulk of the card's content.</p>
-              <h5 class="text-primary">Precio: <span class="precio">$ 5</span></h5>
+              <h5 class="text-primary">Precio: <span class="precio">$ 1500</span></h5>
               <div class="d-grid gap-2">
                 <button class="btn btn-primary button">Añadir a Carrito</button>
               </div>
@@ -105,12 +105,12 @@
         </div>
         <div class="col d-flex justify-content-center mb-4">
           <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-            <h5 class="card-title pt-2 text-center text-primary">Card title 4</h5>
+            <h5 class="card-title pt-2 text-center text-primary">Stikers 4</h5>
             <img src="./img/V-54.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text text-white-50 description">Some quick example text to build on the card title and make
                 up the bulk of the card's content.</p>
-              <h5 class="text-primary">Precio: <span class="precio">$ 5</span></h5>
+              <h5 class="text-primary">Precio: <span class="precio">$ 1500 x MT2</span></h5>
               <div class="d-grid gap-2">
                 <button class="btn btn-primary button">Añadir a Carrito</button>
               </div>
@@ -119,12 +119,12 @@
         </div>
         <div class="col d-flex justify-content-center mb-4">
           <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-            <h5 class="card-title pt-2 text-center text-primary">Card title 5</h5>
+            <h5 class="card-title pt-2 text-center text-primary">Termotransferible 5</h5>
             <img src="./img/T-55.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text text-white-50 description">Some quick example text to build on the card title and make
                 up the bulk of the card's content.</p>
-              <h5 class="text-primary">Precio: <span class="precio">$ 5</span></h5>
+              <h5 class="text-primary">Precio: <span class="precio">$ 4000 x MT2</span></h5>
               <div class="d-grid gap-2">
                 <button class="btn btn-primary button">Añadir a Carrito</button>
               </div>
@@ -133,12 +133,12 @@
         </div>
         <div class="col d-flex justify-content-center mb-4">
           <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-            <h5 class="card-title pt-2 text-center text-primary">Card title 6</h5>
+            <h5 class="card-title pt-2 text-center text-primary">Lonas front para via Publica 6</h5>
             <img src="./img/L-56.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text text-white-50 description">Some quick example text to build on the card title and make
                 up the bulk of the card's content.</p>
-              <h5 class="text-primary">Precio: <span class="precio">$ 5</span></h5>
+              <h5 class="text-primary">Precio: <span class="precio">$ 2000 x MT2</span></h5>
               <div class="d-grid gap-2">
                 <button class="btn btn-primary button">Añadir a Carrito</button>
               </div>
@@ -147,12 +147,12 @@
         </div>
         <div class="col d-flex justify-content-center mb-4">
           <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-            <h5 class="card-title pt-2 text-center text-primary">Card title 7</h5>
+            <h5 class="card-title pt-2 text-center text-primary">Cortina de baño impresas 7</h5>
             <img src="./img/C-57.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text text-white-50 description">Some quick example text to build on the card title and make
                 up the bulk of the card's content.</p>
-              <h5 class="text-primary">Precio: <span class="precio">$ 5</span></h5>
+              <h5 class="text-primary">Precio: <span class="precio">$ 2500 x MT2</span></h5>
               <div class="d-grid gap-2">
                 <button class="btn btn-primary button">Añadir a Carrito</button>
               </div>
@@ -161,12 +161,12 @@
         </div>
         <div class="col d-flex justify-content-center mb-4">
           <div class="card shadow mb-1 bg-dark rounded" style="width: 20rem;">
-            <h5 class="card-title pt-2 text-center text-primary">Card title 8</h5>
+            <h5 class="card-title pt-2 text-center text-primary">Cortinas BO con tu diseño 8</h5>
             <img src="./img/B-58.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text text-white-50 description">Some quick example text to build on the card title and make
                 up the bulk of the card's content.</p>
-              <h5 class="text-primary">Precio: <span class="precio">$ 5</span></h5>
+              <h5 class="text-primary">Precio: <span class="precio">$ 3000 x MT2</span></h5>
               <div class="d-grid gap-2">
                 <button class="btn btn-primary button">Añadir a Carrito</button>
               </div>
@@ -178,6 +178,7 @@
       </div>
 
     </div>
+  </main>
     <div class="tab-pane fade carrito" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
       <br>
       <table class="table table-dark table-hover">
